# laracli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  lib.rs  main.rs  service_config.rs  service_main.rs
src/commands/: install_watch_service.rs  link.rs  mysql.rs  nginx.rs  php.rs  phpmyadmin.rs  setup.rs  watch.rs
src/helpers/: config.rs  download.rs  hosts.rs  mod.rs  mysql.rs  nginx.rs  path.rs
src/utils/: elevate.rs  mod.rs
