[package]
name = "laracli"
version = "0.4.1"
edition = "2024"
default-run = "laracli"

[dependencies]
colored = "3.0.0"
clap = { version = "4", features = ["derive"] }
argh = "=0.1.13"
notify = "6.1.1"
serde_json = "1.0.100"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security", 
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug"
] }
windows-service = "0.7"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
zip = "0.6"
indicatif = "0.17"
winreg = "0.10"
futures-util = "0.3.31"


[[bin]]
name = "laracli"
path = "src/main.rs"

[[bin]]
name = "laracli-service"
path = "src/service_main.rs"

[[bin]]
name = "laracli-service-config"
path = "src/service_config.rs"



[build-dependencies]
chrono = "0.4"
zip = "0.6"
